--- a/style.css
+++ b/style.css
@@ -271,4 +271,8 @@ p {
     cursor: pointer;
     font-size: 24px;
   }
+  #section1, #section2, #section3, #section4{
+    width: 80%;
+    margin-inline: 20%;
+  }
 }
