--- a/style.css
+++ b/style.css
@@ -273,6 +273,6 @@ p {
   }
   #section1, #section2, #section3, #section4{
     width: 80%;
-    margin-inline: 20%;
+    margin-inline: auto;
   }
 }
